Bug 1589931 - P1: Only check non-null current output device. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D52750